# Blackjack-CS3321

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  game.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  rules_and_objects.py  server.js
.github/workflows/: test-build-deploy.yaml
backend/blackjack/: ChatGPTClient.py  app.py  game.py  rules_and_objects.py
backend/blackjack/frontend/: index.html
public/: index.html
src/: ChatGPTClient.py  app.py  game.py  rules_and_objects.py
tests/: conftest.py  test_app.py  test_chatgptclient.py  test_game.py  test_rules_and_objects.py
