[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blackjack"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "flask<3.1",
    "openai>=2.31.0",
    "python-socketio==5.11.1",
    "quart==0.19.4",
    "uvicorn==0.27.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.coverage.run]
source = ["backend"]

[tool.coverage.report]
include = ["backend/*"]

[tool.hatch.build.targets.wheel]
packages = ["backend/blackjack"]
include = ["frontend/public/"]